all(user) remove name column
it wasn't necessary

--- a/static/privacy.html
+++ b/static/privacy.html
@@ -23,7 +23,7 @@
 		<section>
 			<h3>Data collected:</h3>
 			<ul class="section">
-				<li>Your name, username, and unit preference</li>
+				<li>Your username and unit preference</li>
 				<li>A hash of your login password</li>
 				<li>Which universities you've chosen to show on your dashboard</li>
 			</ul>
